// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Break Block should render Default 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Break Block should render ImageRight 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,11 +1,11 @@
  <DocumentFragment>
    <div
      class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+       class="css-17wr6dm-BreakBlockSegment e11xbw3q0"
      >
        <img
          alt="DSC07717"
          class="css-16m3onx-ImageWrapper-BreakBlock e1shv2yg0"
          loading="lazy""
`;

exports[`Break Block should render WithButton 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -146,8 +146,18 @@
                </u>
              </span>
            </p>
          </div>
        </div>
+       <a
+         class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium css-xzjkiw-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiButton-root"
+         href="Link URL"
+         tabindex="0"
+       >
+         Link Text
+         <span
+           class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+         />
+       </a>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`Break Block should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <div
-     class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
+     class="extra-classname css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
        class="css-ywr472-BreakBlockSegment e11xbw3q0"
      >
        <img"
`;

exports[`Break Block should render WithEmotion 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Break Block should render WithoutImage 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,30 +3,20 @@
      class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
        class="css-ywr472-BreakBlockSegment e11xbw3q0"
      >
-       <img
-         alt="DSC07717"
-         class="css-16m3onx-ImageWrapper-BreakBlock e1shv2yg0"
-         loading="lazy"
-         srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-         title=""
-       />
-     </div>
-     <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
-     >
        <div
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          role="heading"
        >
          Break block test
+       </div>
      </div>
+     <div
+       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+     >
        <div
          class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
        >
          <div
            data-gramm="false""
`;

exports[`Break Block should render WithoutImageRight 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,32 +1,22 @@
  <DocumentFragment>
    <div
      class="css-1k98guj-BreakBlockWrapper e11xbw3q1"
    >
      <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
-     >
-       <img
-         alt="DSC07717"
-         class="css-16m3onx-ImageWrapper-BreakBlock e1shv2yg0"
-         loading="lazy"
-         srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-         title=""
-       />
-     </div>
-     <div
-       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+       class="css-17wr6dm-BreakBlockSegment e11xbw3q0"
      >
        <div
          class="MuiTypography-root MuiTypography-h4 css-5lbw0b-MuiTypography-root"
          role="heading"
        >
          Break block test
        </div>
+     </div>
+     <div
+       class="css-ywr472-BreakBlockSegment e11xbw3q0"
+     >
        <div
          class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
        >
          <div
            data-gramm="false""
`;
